[gd_scene load_steps=17 format=3 uid="uid://cplrhnikvgwm3"]

[ext_resource type="Script" uid="uid://mcrj6jlbb0te" path="res://ui/in-game/game_ui.gd" id="1_70thh"]
[ext_resource type="PackedScene" uid="uid://c7wx4swx7fty4" path="res://ui/in-game/dash_gauge.tscn" id="2_3a147"]
[ext_resource type="Material" uid="uid://btuabvmpbtjvk" path="res://effects/slow_down_effect_material.tres" id="2_sfyf6"]
[ext_resource type="PackedScene" uid="uid://bucnbe7ki6q3u" path="res://ui/in-game/heart.tscn" id="3_g3ovh"]
[ext_resource type="Shader" uid="uid://sr5kbh3fj2po" path="res://shaders/shockwave.gdshader" id="3_png7d"]
[ext_resource type="PackedScene" uid="uid://c0qrymdsv0ins" path="res://ui/minimap/minimap_viewer.tscn" id="4_d2uga"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_goryb"]

[sub_resource type="Gradient" id="Gradient_png7d"]
colors = PackedColorArray(0.462289, 0.863967, 0.988594, 1, 0.949493, 0.825498, 0.150811, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_d2uga"]
gradient = SubResource("Gradient_png7d")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_d2uga"]
shader = ExtResource("3_png7d")
shader_parameter/gradient = SubResource("GradientTexture2D_d2uga")
shader_parameter/spread = 0.495
shader_parameter/cutoff = 0.545
shader_parameter/size = -10.055
shader_parameter/speed = 5.0
shader_parameter/ray1_density = 3.645
shader_parameter/ray2_density = 30.53
shader_parameter/ray2_intensity = 0.3
shader_parameter/core_intensity = -3.05
shader_parameter/hdr = false
shader_parameter/seed = 5.0
shader_parameter/alpha = 1.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sfyf6"]

[sub_resource type="FontVariation" id="FontVariation_ooxb5"]
spacing_top = -20
spacing_bottom = -10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ooxb5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_png7d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_huejc"]
bg_color = Color(0.6, 0.6, 0.6, 0.180392)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u7xiq"]
bg_color = Color(0.843137, 0.721569, 0, 1)

[node name="GameUI" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_goryb")
script = ExtResource("1_70thh")

[node name="SlowDownEffect" type="Panel" parent="."]
unique_name_in_owner = true
material = ExtResource("2_sfyf6")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="LvlUpEffect" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
material = SubResource("ShaderMaterial_d2uga")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_sfyf6")

[node name="HBoxContainer2" type="VBoxContainer" parent="MarginContainer/Panel"]
layout_mode = 1
offset_right = 161.0
offset_bottom = 92.0

[node name="RemainingTime" type="Label" parent="MarginContainer/Panel/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_fonts/font = SubResource("FontVariation_ooxb5")
theme_override_font_sizes/font_size = 60
text = "12:34"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/HBoxContainer2"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="MarginContainer/Panel/HBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "SCORE:"

[node name="Score" type="Label" parent="MarginContainer/Panel/HBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "12345"

[node name="MinimapViewer" parent="MarginContainer/Panel" instance=ExtResource("4_d2uga")]
layout_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -75.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 4
theme_override_constants/separation = 15

[node name="DashGauge" parent="MarginContainer/Panel/HBoxContainer" instance=ExtResource("2_3a147")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Hearts" type="HBoxContainer" parent="MarginContainer/Panel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10

[node name="Heart" parent="MarginContainer/Panel/HBoxContainer/Hearts" instance=ExtResource("3_g3ovh")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Heart2" parent="MarginContainer/Panel/HBoxContainer/Hearts" instance=ExtResource("3_g3ovh")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Heart3" parent="MarginContainer/Panel/HBoxContainer/Hearts" instance=ExtResource("3_g3ovh")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Spacer" type="Panel" parent="MarginContainer/Panel/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_ooxb5")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="XpLabel" type="Label" parent="MarginContainer/Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "123/4567"
horizontal_alignment = 2

[node name="Spacer" type="Panel" parent="MarginContainer/Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_png7d")

[node name="LevelLabel" type="Label" parent="MarginContainer/Panel/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Niv. 1"

[node name="XpBar" type="ProgressBar" parent="MarginContainer/Panel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/background = SubResource("StyleBoxFlat_huejc")
theme_override_styles/fill = SubResource("StyleBoxFlat_u7xiq")
max_value = 10.0
step = 0.1
value = 3.3
show_percentage = false
